--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
     </p>
   </div>
 </section>
+        <section style="background-image: url('./assets/_.jpeg'); height: 300px; background-size: cover; background-position: center;">
+</section>
+
 </main>
 
     <script>
