--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 
 <!-- Social Media Section - Vertical Layout -->
-<section id="social" class="relative w-full py-24 bg-cover bg-center rounded-3xl shadow-lg shadow-purple-300" style="background-image: url('./assets/_.jpeg'); ">
+<section id="social" class="relative w-full py-24 bg-cover bg-center rounded-3xl shadow-lg shadow-purple-300" style="background-image: url('./assets/bg.jpeg'); ">
   <div class="max-w-xl mx-auto px-6 text-center ">
     <div class="flex flex-col gap-[100PX]">
         <div class="flex flex-col items-center relative">
@@ -254,9 +254,7 @@
     </p>
   </div>
 </section>
-        <section style="background-image: url('./assets/_.jpeg'); height: 300px; background-size: cover; background-position: center;">
-</section>
-
+      
 </main>
 
     <script>
