--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 
 <!-- Social Media Section - Vertical Layout -->
-<section id="social" class="relative w-full py-24 bg-cover bg-center rounded-3xl shadow-lg shadow-purple-300" style="background-image: url('./assets/bg.jpeg'); ">
+<section id="social" class="relative w-full py-24 bg-cover bg-center rounded-3xl shadow-lg shadow-purple-300 min-h-[800px]" style="background-image: url('./assets/bg.jpeg'); ">
   <div class="max-w-xl mx-auto px-6 text-center ">
     <div class="flex flex-col gap-[100PX]">
         <div class="flex flex-col items-center relative">
