--- a/index.html
+++ b/index.html
@@ -448,6 +448,17 @@ envelopeImg.addEventListener("click", () => {
     });
   });
 
+
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener('click', function (e) {
+    e.preventDefault();
+    document.querySelector(this.getAttribute('href')).scrollIntoView({
+      behavior: 'smooth',
+      block: 'start'
+    });
+  });
+});
+
         
 
     </script>
