--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
     <button class="chat-btn bg-[#fffffe] hover:bg-yellow-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="Hi! I'm Aarushi 💜 But friends call me Rushi or Aaru!">
       Name?
     </button>
-    <button class="chat-btn bg-[#fffffe] hover:bg-purple-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="My birthday is 8th September 2006 🎂 (Same as Shubman Gill 🏏)">
+    <button class="chat-btn bg-[#fffffe] hover:bg-purple-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="My birthday is 8th September 2006 🎂 (Same as Shubman Gill )">
       Birthday?
     </button>
-    <button class="chat-btn bg-[#fffffe] hover:bg-pink-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="HTML, CSS, Tailwind, JavaScript, React... and ✨magic✨">
+    <button class="chat-btn bg-[#fffffe] hover:bg-pink-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="HTML, CSS, Tailwind, JavaScript, React, Python and learning more!">
       Tech Stack?
     </button>
-    <button class="chat-btn bg-[#fffffe] hover:bg-blue-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="Dream collab? Me + Snoopy + Lando Norris 🐶🏎️💜">
+    <button class="chat-btn bg-[#fffffe] hover:bg-blue-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="Dream collab? Me + Snoopy + Lando Norris">
       Dream Collab?
     </button>
-    <button class="chat-btn bg-[#fffffe] hover:bg-green-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="100% Ravenclaw 🦅 Logically magical.">
+    <button class="chat-btn bg-[#fffffe] hover:bg-green-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="100% Ravenclaw.">
      Hogwarts House?
     </button>
     <button class="chat-btn bg-[#fffffe] hover:bg-red-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="Currently building an AI-based Study Buddy 🤖💡 to help people learn gently!">
       Current Project?
     </button>
-    <button class="chat-btn bg-[#fffffe] hover:bg-fuchsia-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="My comfort shows? Brooklyn Nine-Nine & Modern Family 🎬🛋️">
+    <button class="chat-btn bg-[#fffffe] hover:bg-fuchsia-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="My comfort shows? Brooklyn Nine-Nine & Modern Family ">
       Comfort Show?
     </button>
-    <button class="chat-btn bg-[#fffffe] hover:bg-orange-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="Hardest project? Definitely SHIELD – but I loved building it 💥🛡️">
+    <button class="chat-btn bg-[#fffffe] hover:bg-orange-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="Hardest project? Definitely SHIELD – but I loved building it 🛡️">
       Hardest Project?
     </button>
-    <button class="chat-btn bg-[#fffffe] hover:bg-indigo-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="Currently professionalizing React... and crying in between 😭💻">
+    <button class="chat-btn bg-[#fffffe] hover:bg-indigo-400 text-purple-900 font-bold py-2 px-4 rounded-full shadow-md" data-answer="Currently professionalizing React... and crying in between.">
      Currently Learning?
     </button>
   </div>
