--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <!-- Hidden Resume link -->
              <div id="resume-container" class="opacity-0 mt-10 transition-opacity duration-700 mb-[100px]">
-                 <a href="./RESUME.pdf" target="_blank" class="text-2xl font-love-ya text-blue-700 underline hover:text-blue-900">📄 View Resume</a>
+                 <a href="./Resume.pdf" target="_blank" class="text-2xl font-love-ya text-blue-700 underline hover:text-blue-900">📄 View Resume</a>
              </div>
         </section>
 
